# Boostcamp_AI_Tech_RecSys_Project

./: README.md
Backend/: Dockerfile  README.md  egg.sh  pyproject.toml  requirements.txt
Backend/app/: beaming-answer-351714-8aabefa34e8c.json  main.py
Backend/app/api/routes/: predictor.py
Backend/app/core/: config.py  events.py
Backend/app/models/: prediction.py
Backend/app/services/: predict.py
Backend/app/templates/: index.html
Backend/ml/model/: model.pkl
Backend/ml/model/HGAT/: args.py  dataset.py  load_model.py  models.py  run.py
Frontend/[final]django/: .gitignore  Dockerfile  docker-compose.yml  requirements.txt  shell_command.ipynb
Frontend/[final]django/Recipe_Rec/: settings.py  wsgi.py
Frontend/[final]django/main_page/: views.py
Frontend/[final]django/nginx/: nginx.conf
Frontend/[incomplete]EDA,streamlit/: EDA.ipynb  README.md  Streamlit.py  main.py  recipe.py
Frontend/[incomplete]EDA,streamlit/contents/: __init__.py  dashboard.py  home.py  ingredient.py  keyword.py  login.py  recipe.py
Frontend/[incomplete]EDA,streamlit/static/dataset/: 레시피_메타정보_s.csv  레시피_재료_내용_s.csv  레시피_태그_내용_s.csv  재료_메타정보_s.csv
Model/HGAT/: final_layers.py  final_models.py  final_run.ipynb
Model/unpersonalized, preference/: cosine_similarity.ipynb  popularity.ipynb  preference_score.ipynb
